<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- General app -->
    <string name="app_name">AppName</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

	<!-- login -->
    <string name="welcome">Welcome to SimplyFit</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    
    <!-- profile edit -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender_prompt">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="public_check">Public</string>
    <string name="private_check">Private</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_image_chooser">ImageChooserActivity</string>
    <string name="title_activity_profile_photo">ProfilePhotoActivity</string>
    
    <!-- page names -->
    <string name="title_activity_results">Results</string>
    <string name="title_activity_menu">Main Menu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_workout">Workout</string>
    
    <!-- arrays -->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="age_array">
    	<item>less than 15</item>
        <item>15-17</item>
        <item>18-20</item>
        <item>21-23</item>
        <item>24-26</item>
        <item>27-29</item>
        <item>30-32</item>
        <item>33-35</item>
        <item>36-39</item>
        <item>40+</item>
    </string-array>

</resources>
