<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
     <TextView
     	android:id="@+id/welcome"
     	android:layout_width="wrap_content"
     	android:layout_height="wrap_content"
     	android:layout_weight="1"
    	android:layout_gravity="center"
     	android:text="@string/welcome"
     	android:textColor="#ff000000"
     	android:textSize="32sp"
     	android:textStyle="bold" />
                
     <EditText android:id="@+id/edit_message"
     	android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:hint="@string/user_name" 
        android:maxLines="1"
        android:singleLine="true" />
        
     <EditText android:id="@+id/edit_message"
     	android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:hint="@string/password" 
        android:maxLines="1"
        android:singleLine="true" />
        
     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login" 
        android:onClick="checkLogin" />
        
</LinearLayout>