<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <EditText android:id="@+id/edit_message"
     	android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name" 
        android:maxLines="1"
        android:singleLine="true" />
    <EditText android:id="@+id/edit_message"
     	android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name" 
        android:maxLines="1"
        android:singleLine="true" />
        
    <Spinner
    	android:id="@+id/gender"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:spinnerMode="dropdown"
    	android:entries="@array/gender_array"
    	android:prompt="@string/gender_prompt" />    
    <Spinner
    	android:id="@+id/age"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:spinnerMode="dropdown"
    	android:entries="@array/age_array"
    	android:prompt="@string/age_prompt" />

</LinearLayout>
